WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215641
Vertical scrolling gets stuck when a horizontal scroller is under the mouse (google search results)
https://bugs.webkit.org/show_bug.cgi?id=215641
Summary
Vertical scrolling gets stuck when a horizontal scroller is under the mouse (...
Mehmet
Reported
2020-08-18 23:33:53 PDT
Created
attachment 406829
[details]
Vertical scrolling lag Safari Technology Preview Release 112 (Safari 14.0, WebKit 15610.1.25.5.1) OS: macOS 10.15.6 Type: Regression Steps to reproduce: 1.) go to google.com 2.) search for "apple" 3.) scroll down until you see the video section, where you can scroll horizontally 4.) now move the mouse cursor over this box and try to scroll vertically up or down to the page Actual result: Vertical scrolling lags, because it wants to scroll also horizontally. Expected result: Vertical scrolling should not lag. This seems to be a regression in Safari Technology Preview 14. This is not a problem in Safari Stable Version 13.1.2 (15609.3.5.1.3). A screencast of the issue is attached. Thanks for fixing it in advance.
Attachments
Vertical scrolling lag
(8.97 MB, video/quicktime)
2020-08-18 23:33 PDT
,
Mehmet
no flags
Details
Patch
(18.34 KB, patch)
2020-08-27 22:24 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(20.29 KB, patch)
2020-08-27 23:38 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(24.82 KB, patch)
2020-08-28 12:07 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-08-19 15:23:06 PDT
<
rdar://problem/67430532
>
Simon Fraser (smfr)
Comment 2
2020-08-27 22:24:55 PDT
Created
attachment 407451
[details]
Patch
Simon Fraser (smfr)
Comment 3
2020-08-27 23:38:00 PDT
Created
attachment 407452
[details]
Patch
Simon Fraser (smfr)
Comment 4
2020-08-28 12:07:25 PDT
Created
attachment 407494
[details]
Patch
Simon Fraser (smfr)
Comment 5
2020-08-28 14:15:34 PDT
https://trac.webkit.org/r266292
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug