Source/WebCore/page/scrolling/ScrollingTree.h
@@ -212,6 +212,8 @@ public:
     WEBCORE_EXPORT void willProcessWheelEvent();
 
 protected:
+    WheelEventHandlingResult handleWheelEventWithNode(const PlatformWheelEvent&, ScrollingTreeNode*);
+
     FloatPoint mainFrameScrollPosition() const;
     void setMainFrameScrollPosition(FloatPoint);
 
@@ -234,6 +236,7 @@ private:
 #if ENABLE(WHEEL_EVENT_REGIONS)
     WEBCORE_EXPORT virtual OptionSet<EventListenerRegionType> eventListenerRegionTypesForPoint(FloatPoint) const;
 #endif
+
     virtual void receivedWheelEvent(const PlatformWheelEvent&) { }
     
     RefPtr<ScrollingTreeFrameScrollingNode> m_rootNode;
